--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -10,6 +10,17 @@
   year      = {2013},
   pages = {108--122},
 }
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
 @article{slakey,
   author    = {Austin Slakey and
                Daniel Salas and
@@ -38,4 +49,37 @@
   timestamp = {Sat, 23 Jan 2021 01:11:28 +0100},
   biburl    = {https://dblp.org/rec/journals/corr/abs-2006-01317.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@misc{pargent,
+      title={Regularized target encoding outperforms traditional methods in supervised machine learning with high cardinality features}, 
+      author={Florian Pargent and Florian Pfisterer and Janek Thomas and Bernd Bischl},
+      year={2021},
+      eprint={2104.00629},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+@article{lightgbm,
+  title={Lightgbm: A highly efficient gradient boosting decision tree},
+  author={Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  pages={3146--3154},
+  year={2017}
+}
+@inproceedings{xgboost,
+ author = {Chen, Tianqi and Guestrin, Carlos},
+ title = {{XGBoost}: A Scalable Tree Boosting System},
+ booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ series = {KDD '16},
+ year = {2016},
+ isbn = {978-1-4503-4232-2},
+ location = {San Francisco, California, USA},
+ pages = {785--794},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2939672.2939785},
+ doi = {10.1145/2939672.2939785},
+ acmid = {2939785},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {large-scale machine learning},
 }
